--- a/taskly-client/package.json
+++ b/taskly-client/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-context-api": "^1.0.2",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
